--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="http://127.0.0.1:5000/">Data Barang</a>
+        <a class="navbar-brand" href="http://127.0.0.1:5000/">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="http://127.0.0.1:5000/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://127.0.0.1:5000/barang">Barang <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="http://127.0.0.1:5000/barang">Data Barang <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="http://127.0.0.1:5000/tambah">Tambah</a>
@@ -34,7 +34,7 @@
         </div>
     </nav>
     <div class="p-4">
-        <h1>Aplikasi Pendataan Siswa</h1>
+        <h1>Aplikasi Pendataan Barang</h1>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
