--- a/templates/tambah.html
+++ b/templates/tambah.html
@@ -21,7 +21,7 @@
             </li>
         </div>
       </nav>
-    <title>Data Barang</title>
+    <title>Aplikasi Data Barang</title>
   </head>
   <body>
       <div class="p-3">
