--- a/templates/barang.html
+++ b/templates/barang.html
@@ -27,7 +27,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="http://127.0.0.1:5000/barang">Data Barang <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="http://127.0.0.1:5000/tambah">Tambah</a>
                 </li>
 
