--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="http://127.0.0.1:5000/">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+        <img class="navbar-brand" src="{{url_for('static', filename='img/logo1.png')}}" width="78" height="78"></a>
+        <a class="navbar-brand" href="http://127.0.0.1:5000/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -22,12 +23,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://127.0.0.1:5000/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
                     <a class="nav-link" href="http://127.0.0.1:5000/barang">Data Barang <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="http://127.0.0.1:5000/tambah">Tambah</a>
                 </li>
 
@@ -42,9 +40,6 @@
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{url_for('static', filename='img/img2.jpeg')}}" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="{{url_for('static', filename='img/img3.jpeg')}}" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
