Menambahkan logo di navbar

--- a/templates/barang.html
+++ b/templates/barang.html
@@ -13,17 +13,15 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="http://127.0.0.1:5000/">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+        <img class="navbar-brand" src="{{url_for('static', filename='img/logo1.png')}}" width="78" height="78"></a>
+        <a class="navbar-brand" href="http://127.0.0.1:5000/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="http://127.0.0.1:5000/">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="http://127.0.0.1:5000/barang">Data Barang <span class="sr-only">(current)</span></a>
                 </li>
