--- a/templates/tambah.html
+++ b/templates/tambah.html
@@ -8,8 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://127.0.0.1:5000/">Navbar</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+        <img class="navbar-brand" src="{{url_for('static', filename='img/logo1.png')}}" width="78" height="78"></a>
+        <a class="navbar-brand" href="http://127.0.0.1:5000/">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
