Menambahkan aplikasi pendataan karyawan

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="http://127.0.0.1:5000/barang">Data Barang <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://127.0.0.1:5000/tambah">Tambah</a>
+                    <a class="nav-link" href="http://127.0.0.1:5000/karyawan">Data Karyawan</a>
                 </li>
 
         </div>
