--- a/templates/karyawan.html
+++ b/templates/karyawan.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
-    <title>Aplikasi Pendataan Barang</title>
+    <title>Aplikasi Pendataan Karyawan</title>
 </head>
 
 <body>
@@ -29,6 +29,7 @@
                     <a class="nav-link" href="http://127.0.0.1:5000/karyawan">Data Karyawan</a>
                 </li>
 
+
         </div>
     </nav>
     {% with messages = get_flashed_messages() %} {% if messages %}
@@ -41,17 +42,17 @@
         </div>
         {% endif %} {% endwith %} {% block body %}{% endblock %}
     <div class="p-4">
-        <h1>Daftar Data Barang</h1>
-        <a href="http://127.0.0.1:5000/tambah" class="btn btn-primary" role="button">Tambah</a>
+        <h1>Aplikasi Pendataan Karyawan</h1>
+        <a href="http://127.0.0.1:5000/tambah1" class="btn btn-primary" role="button">Tambah</a>
         <table class="table">
             <thead>
                 <tr>
                     <th scope="col">No</th>
-                    <th scope="col">Nama Barang</th>
-                    <th scope="col">Jumlah Barang</th>
-                    <th scope="col">Lokasi Barang</th>
-                    <th scope="col">Harga</th>
-                    <th scope="col">Keterangan</th>
+                    <th scope="col">Nama Lengkap</th>
+                    <th scope="col">Gender</th>
+                    <th scope="col">Tanggal Lahir</th>
+                    <th scope="col">No. Telp</th>
+                    <th scope="col">Alamat</th>
                     <th>Edit</th>
                     <th>Delete</th>
                 </tr>
@@ -66,44 +67,44 @@
                     <td>{{ row[3] }}</td>
                     <td>{{ row[4] }}</td>
                     <td>{{ row[5] }}</td>
-                    <td><a href="http://localhost:5000/edit/{{ row[0] }}" data-toggle="modal" data-target="#edit{{ row[0] }}" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a></td>
+                    <td><a href="http://localhost:5000/edit1/{{ row[0] }}" data-toggle="modal" data-target="#edit1{{ row[0] }}" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a></td>
                     <td>
-                      <a onclick="return confirm('Are you sure you want to delete this item?');" href=" http://localhost:5000/hapus/{{ row[0] }} " class="btn btn-danger "><i class="bi bi-trash "></i></a></td>
+                      <a onclick="return confirm('Are you sure you want to delete this item?');" href=" http://localhost:5000/hapus1/{{ row[0] }} " class="btn btn-danger "><i class="bi bi-trash "></i></a></td>
                 </tr>
             </tbody>
 
             <!-- Modal -->
-            <div class="modal fade" id="edit{{row[0]}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+            <div class="modal fade" id="edit1{{row[0]}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Edit Data Barang</h5>
+                            <h5 class="modal-title" id="exampleModalLongTitle">Edit Data Karyawan</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                         </div>
                         <div class="modal-body">
-                            <form action="{{ url_for('edit') }}" method="POST">
+                            <form action="{{ url_for('edit1') }}" method="POST">
                                 <input type="hidden" name="no" value="{{row[0]}}">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">Nama Barang</label>
-                                    <input type="text" name="nama_barang" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan Nama Barang" value="{{ row[1] }}">
+                                    <label for="exampleInputEmail1">Nama</label>
+                                    <input type="text" name="nama" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan Nama" value="{{ row[1] }}">
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">Jumlah Barang</label>
-                                    <input type="text" name="jumlah_barang" class="form-control" id="exampleInputPassword1" placeholder="Masukan Jumlah Barang" value="{{ row[2] }}">
+                                    <label for="exampleInputPassword1">Gender</label>
+                                    <input type="text" name="gender" class="form-control" id="exampleInputPassword1" placeholder="Masukan" value="{{ row[2] }}">
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">Lokasi Barang</label>
-                                    <input type="text" name="lokasi_barang" class="form-control" id="exampleInputPassword1" placeholder="Musakan Lokasi Barang" value="{{ row[3] }}">
+                                    <label for="exampleInputPassword1">Tanggal Lahir</label>
+                                    <input type="date" name="tanggal_lahir" class="form-control" id="exampleInputPassword1" placeholder="Musakan Sekolah" value="{{ row[3] }}">
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">Harga</label>
-                                    <input type="text" name="harga" class="form-control" id="exampleInputPassword1" placeholder="Masukan Harga" value="{{ row[4] }}">
+                                    <label for="exampleInputPassword1">No. Telp</label>
+                                    <input type="text" name="telp" class="form-control" id="exampleInputPassword1" placeholder="Masukan no. telp" value="{{ row[4] }}">
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">Keterangan</label>
-                                    <input type="text" name="keterangan" class="form-control" id="exampleInputPassword1" placeholder="Masukan Keterangan" value="{{ row[5] }}">
+                                    <label for="exampleInputPassword1">Alamat</label>
+                                    <input type="text" name="alamat" class="form-control" id="exampleInputPassword1" placeholder="Masukan Alamat" value="{{ row[5] }}">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
