--- a/templates/karyawan.html
+++ b/templates/karyawan.html
@@ -48,11 +48,19 @@
             <thead>
                 <tr>
                     <th scope="col">No</th>
-                    <th scope="col">Nama Lengkap</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">Tanggal Lahir</th>
+                    <th scope="col">ID User</th>
+                    <th scope="col">Nama Lenkap</th>
+                    <th scope="col">Password</th>
                     <th scope="col">No. Telp</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Tempat Lahir</th>
+                    <th scope="col">Tanggal Lahir</th>
+                    <th scope="col">Jenis Kelamin</th>
                     <th scope="col">Alamat</th>
+                    <th scope="col">Provinsi</th>
+                    <th scope="col">Kabupaten Kota</th>
+                    <th scope="col">ID Jabatan</th>
+                    <th scope="col">ID Projek</th>
                     <th>Edit</th>
                     <th>Delete</th>
                 </tr>
@@ -67,6 +75,14 @@
                     <td>{{ row[3] }}</td>
                     <td>{{ row[4] }}</td>
                     <td>{{ row[5] }}</td>
+                    <td>{{ row[6] }}</td>
+                    <td>{{ row[7] }}</td>
+                    <td>{{ row[8] }}</td>
+                    <td>{{ row[9] }}</td>
+                    <td>{{ row[10] }}</td>
+                    <td>{{ row[11] }}</td>
+                    <td>{{ row[12] }}</td>
+                    <td>{{ row[13] }}</td>
                     <td><a href="http://localhost:5000/edit1/{{ row[0] }}" data-toggle="modal" data-target="#edit1{{ row[0] }}" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a></td>
                     <td>
                       <a onclick="return confirm('Are you sure you want to delete this item?');" href=" http://localhost:5000/hapus1/{{ row[0] }} " class="btn btn-danger "><i class="bi bi-trash "></i></a></td>
@@ -87,25 +103,57 @@
                             <form action="{{ url_for('edit1') }}" method="POST">
                                 <input type="hidden" name="no" value="{{row[0]}}">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">Nama</label>
-                                    <input type="text" name="nama" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan Nama" value="{{ row[1] }}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">Gender</label>
-                                    <input type="text" name="gender" class="form-control" id="exampleInputPassword1" placeholder="Masukan" value="{{ row[2] }}">
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">Tanggal Lahir</label>
-                                    <input type="date" name="tanggal_lahir" class="form-control" id="exampleInputPassword1" placeholder="Musakan Sekolah" value="{{ row[3] }}">
-                                </div>
-                                <div class="form-group">
+                                    <label for="exampleInputEmail1">ID User</label>
+                                    <input type="text" name="id_user" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan id user">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Nama</label>
+                                    <input type="text" name="nama_lengkap" class="form-control" id="exampleInputPassword1" placeholder="Masukan nama">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Password</label>
+                                    <input type="text" name="password" class="form-control" id="exampleInputPassword1" placeholder="Masukan password">
+                                  </div>
+                                  <div class="form-group">
                                     <label for="exampleInputPassword1">No. Telp</label>
-                                    <input type="text" name="telp" class="form-control" id="exampleInputPassword1" placeholder="Masukan no. telp" value="{{ row[4] }}">
-                                </div>
-                                <div class="form-group">
+                                    <input type="text" name="no_telp" class="form-control" id="exampleInputPassword1" placeholder="Masukan no. telp">
+                                  </div>
+                                  <div class="form-group">
+                                      <label for="exampleInputPassword1">Email</label>
+                                      <input type="text" name="email" class="form-control" id="exampleInputPassword1" placeholder="Masukan email">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Tempat Lahir</label>
+                                    <input type="text" name="tempat_lahir" class="form-control" id="exampleInputPassword1" placeholder="Masukan tempat lahir">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Tanggal Lahir</label>
+                                    <input type="date" name="tanggal_lahir" class="form-control" id="exampleInputPassword1" placeholder="Masukan tanggal lahir">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Jenis Kelamin</label>
+                                    <input type="text" name="jenis_kelamin" class="form-control" id="exampleInputPassword1" placeholder="Masukan jenis kelamin">
+                                  </div>
+                                  <div class="form-group">
                                     <label for="exampleInputPassword1">Alamat</label>
-                                    <input type="text" name="alamat" class="form-control" id="exampleInputPassword1" placeholder="Masukan Alamat" value="{{ row[5] }}">
-                                </div>
+                                    <input type="text" name="alamat" class="form-control" id="exampleInputPassword1" placeholder="Masukan alamat">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Provinsi</label>
+                                    <input type="text" name="provinsi" class="form-control" id="exampleInputPassword1" placeholder="Masukan provinsi">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">Kabupaten Kota</label>
+                                    <input type="text" name="kabupaten_kota" class="form-control" id="exampleInputPassword1" placeholder="Masukan kabupaten kota">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">ID Jabatan</label>
+                                    <input type="text" name="id_jabatan" class="form-control" id="exampleInputPassword1" placeholder="Masukan id jabatan">
+                                  </div>
+                                  <div class="form-group">
+                                    <label for="exampleInputPassword1">ID Projek</label>
+                                    <input type="text" name="id_projek" class="form-control" id="exampleInputPassword1" placeholder="Masukan id projek">
+                                  </div>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
                         </div>
