--- a/templates/karyawan.html
+++ b/templates/karyawan.html
@@ -47,7 +47,6 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">No</th>
                     <th scope="col">ID User</th>
                     <th scope="col">Nama Lenkap</th>
                     <th scope="col">Password</th>
@@ -82,7 +81,6 @@
                     <td>{{ row[10] }}</td>
                     <td>{{ row[11] }}</td>
                     <td>{{ row[12] }}</td>
-                    <td>{{ row[13] }}</td>
                     <td><a href="http://localhost:5000/edit1/{{ row[0] }}" data-toggle="modal" data-target="#edit1{{ row[0] }}" class="btn btn-primary"><i class="bi bi-pencil-square"></i></a></td>
                     <td>
                       <a onclick="return confirm('Are you sure you want to delete this item?');" href=" http://localhost:5000/hapus1/{{ row[0] }} " class="btn btn-danger "><i class="bi bi-trash "></i></a></td>
@@ -101,58 +99,54 @@
                         </div>
                         <div class="modal-body">
                             <form action="{{ url_for('edit1') }}" method="POST">
-                                <input type="hidden" name="no" value="{{row[0]}}">
+                                <input type="hidden" name="id_user" value="{{row[0]}}">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">ID User</label>
-                                    <input type="text" name="id_user" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan id user">
-                                  </div>
-                                  <div class="form-group">
-                                    <label for="exampleInputPassword1">Nama</label>
-                                    <input type="text" name="nama_lengkap" class="form-control" id="exampleInputPassword1" placeholder="Masukan nama">
-                                  </div>
+                                  <label for="exampleInputEmail1">Nama</label>
+                                  <input type="text" name="nama_lengkap" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Masukan nama lengkap" value="{{ row[1] }}">
+                              </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Password</label>
-                                    <input type="text" name="password" class="form-control" id="exampleInputPassword1" placeholder="Masukan password">
+                                    <input type="text" name="password" class="form-control" id="exampleInputPassword1" placeholder="Masukan password" value="{{ row[2] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">No. Telp</label>
-                                    <input type="text" name="no_telp" class="form-control" id="exampleInputPassword1" placeholder="Masukan no. telp">
+                                    <input type="text" name="no_telp" class="form-control" id="exampleInputPassword1" placeholder="Masukan no. telp" value="{{ row[3] }}">
                                   </div>
                                   <div class="form-group">
                                       <label for="exampleInputPassword1">Email</label>
-                                      <input type="text" name="email" class="form-control" id="exampleInputPassword1" placeholder="Masukan email">
+                                      <input type="text" name="email" class="form-control" id="exampleInputPassword1" placeholder="Masukan email" value="{{ row[4] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Tempat Lahir</label>
-                                    <input type="text" name="tempat_lahir" class="form-control" id="exampleInputPassword1" placeholder="Masukan tempat lahir">
+                                    <input type="text" name="tempat_lahir" class="form-control" id="exampleInputPassword1" placeholder="Masukan tempat lahir" value="{{ row[5] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Tanggal Lahir</label>
-                                    <input type="date" name="tanggal_lahir" class="form-control" id="exampleInputPassword1" placeholder="Masukan tanggal lahir">
+                                    <input type="date" name="tanggal_lahir" class="form-control" id="exampleInputPassword1" placeholder="Masukan tanggal lahir" value="{{ row[6] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Jenis Kelamin</label>
-                                    <input type="text" name="jenis_kelamin" class="form-control" id="exampleInputPassword1" placeholder="Masukan jenis kelamin">
+                                    <input type="text" name="jenis_kelamin" class="form-control" id="exampleInputPassword1" placeholder="Masukan jenis kelamin" value="{{ row[7] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Alamat</label>
-                                    <input type="text" name="alamat" class="form-control" id="exampleInputPassword1" placeholder="Masukan alamat">
+                                    <input type="text" name="alamat" class="form-control" id="exampleInputPassword1" placeholder="Masukan alamat" value="{{ row[8] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Provinsi</label>
-                                    <input type="text" name="provinsi" class="form-control" id="exampleInputPassword1" placeholder="Masukan provinsi">
+                                    <input type="text" name="provinsi" class="form-control" id="exampleInputPassword1" placeholder="Masukan provinsi" value="{{ row[9] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">Kabupaten Kota</label>
-                                    <input type="text" name="kabupaten_kota" class="form-control" id="exampleInputPassword1" placeholder="Masukan kabupaten kota">
+                                    <input type="text" name="kabupaten_kota" class="form-control" id="exampleInputPassword1" placeholder="Masukan kabupaten kota" value="{{ row[10] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">ID Jabatan</label>
-                                    <input type="text" name="id_jabatan" class="form-control" id="exampleInputPassword1" placeholder="Masukan id jabatan">
+                                    <input type="text" name="id_jabatan" class="form-control" id="exampleInputPassword1" placeholder="Masukan id jabatan" value="{{ row[11] }}">
                                   </div>
                                   <div class="form-group">
                                     <label for="exampleInputPassword1">ID Projek</label>
-                                    <input type="text" name="id_projek" class="form-control" id="exampleInputPassword1" placeholder="Masukan id projek">
+                                    <input type="text" name="id_projek" class="form-control" id="exampleInputPassword1" placeholder="Masukan id projek" value="{{ row[12] }}">
                                   </div>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
