--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="{{url_for('static', filename='img/img1.jpeg')}}" alt="First slide">
+                    <img class="d-block w-100" src="{{url_for('static', filename='img/img1.jpg')}}" alt="First slide">
                 </div>
                 <div class="carousel-item">
                     <img class="d-block w-100" src="{{url_for('static', filename='img/img2.jpeg')}}" alt="Second slide">
